added new files/templates

--- a/visdata.html
+++ b/visdata.html
@@ -50,25 +50,14 @@
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="header">
       <div class="container">
-        <table>
-          <tr>
-            <td><img style="width:250px"src="./img/oscar-3.jpg"></td>
-            <td>  
-              <h2>And the Oscar goes to...</h2>
-              <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            </td>
-          </tr>
-        </table>
+        <h3>Visualizing the Data</h3>
+        <p>This will be a really long section including a lot of the graphs from the process book</p>
       </div>
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
-      <div style= "text-align:center">
-        <b>Link to video goes here</b>
-      </div>
 
       <hr>
 
