website updates; through visualizations

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>And the Oscar Goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -17,6 +17,8 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="img/favicon.ico" rel="shortcut icon">
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script src="js/jquery-1.10.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -28,6 +30,8 @@
         <![endif]-->
     </head>
     <body>
+    <div class='wrapper'>
+
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -57,7 +61,7 @@
             <td><img style="width:250px"src="./img/oscar-3.jpg"></td>
             <td>  
               <h2>And the Oscar goes to...</h2>
-              <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+              <p>Have you ever been sitting on the couch with your friends watching the Oscars, betting (large amounts of money) on who will win with no real justification for your guess? Fear no more! This project will help you make a more educated prediction on which movie is likeliest to win or get nominated for an Oscar.</p>
             </td>
           </tr>
         </table>
@@ -65,7 +69,10 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
+      <div>
+        <p>To get started, you can begin by watching the video below, clicking the following button.
+          <div><a class="btn btn-default slide btn-success" href="getdata.html">Let's Begin &raquo;</a></div></p>
+      </div>
       <div style= "text-align:center">
         <b>Link to video goes here</b>
       </div>
@@ -76,5 +83,7 @@
         <p>&copy; Company 2013</p>
       </footer>
     </div> <!-- /container -->
-    </body>
+</div>
+</body>
+
 </html>
