--- a/visdata.html
+++ b/visdata.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>And the Oscar Goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -17,6 +17,8 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="img/favicon.ico" rel="shortcut icon">
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script src="js/jquery-1.10.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -28,6 +30,8 @@
         <![endif]-->
     </head>
     <body>
+    <div class='wrapper'>
+
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -52,18 +56,46 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="header">
       <div class="container">
-        <h3>Visualizing the Data</h3>
-        <p>This will be a really long section including a lot of the graphs from the process book</p>
+        <h2>Visualizing the Data</h2>
       </div>
     </div>
 
     <div class="container">
-
+        <b>Box Office Mojo</b>
+        <div>
+        </div>
+        <hr>
+        <b>IMDB</b>
+        <div>
+            <p>We began by investigating the basic stucture for the IMDB DataFrame:
+<pre class="text">
+Number of reviews: 435,277
+Number of critics: 199,188
+Number of Movies: 1900
+</pre>
+            </p>
+            <p>We next decided to look at the average number of reviews per user to try to get an idea of the roughly the users' 'rating experience'</p>
+            <img class="vis" src="img/data/imdb_revpercrit.png">
+            <p>As one can see, although we have a very large number of reviews and reviews, most of them do not interview that many movies themselves.</p>
+            <p>Next, we will visualize how the number of reviews changes over the years, and how the average ratings equuivalently change.</p>
+            <img class="vis" src="img/data/imdb_reviews_over_years.png">
+            <p>Interestingly, the peak of user reviews is in 2005, with the number of reviews exponentially falling off until 2011. Thus, it seems that as IMDB became more widespread and popular, <i>fewer</i> people actually have been leaving reviews for movies.</p>
+            <p>Now that we have an idea of the distribution of the data over the years, let's look at the actual review ratings. On IMDB users have the option of rating movies without actually leaving a review. Here, we compare the overall movie rating to the average rating user critics give as an approximate measure of whether user critics or general users rate movies more harshly.</p>
+<pre class="text">
+average movie rating: 6.27 / 10
+average user critic rating: 6.27 / 10
+</pre>
+            <p>From this measure, it appears that the user critics rate the movies the same as the average user. Let's try to visualize this a little more explicitly.</p>
+            <img class="vis" src="img/data/imdb_avg_rating.png">
+            <p>From this histogram, it appears we have an almost bi-modal distribution where the highest frequency averages are at the polar ends. Considering that a user would be more likely to write a review for a movie if he or she absolutely hated or loved it, this isn't that surprising because then they too would rate it at the extremes.</p>
+        </div>
+        <div><a class="btn btn-default slide btn-success" href="stat.html">Give me some Stats! &raquo;</a></div>
       <hr>
-
       <footer>
         <p>&copy; Company 2013</p>
       </footer>
     </div> <!-- /container -->
-    </body>
+</div> <!-- wrapper -->
+</body>
+
 </html>
