--- a/getdata.html
+++ b/getdata.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>And the Oscar Goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -17,6 +17,8 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="img/favicon.ico" rel="shortcut icon">
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script src="js/jquery-1.10.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -28,6 +30,8 @@
         <![endif]-->
     </head>
     <body>
+    <div class='wrapper'>
+
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -52,18 +56,47 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="header">
       <div class="container">
-        <h3>Getting the Data</h3>
-        <p>Something about scraping and the like</p>
+        <h2>Getting the Data</h2>
       </div>
     </div>
 
     <div class="container">
-
+        <h4>Getting the Movies</h4>
+        <div>
+            <p>In order to run our analysis, we need to isolate a dataset of movies for a given year that are candidates for an Oscar. For this purpose, we decided to extract a subset of the movies outlined by Box Office Mojo as the top movies in a given year. Assumming that the movies most likely to win an Oscar are likely to be among those with the highest gross revenue in a given year, we decided to select the Top 200 movies from each year as candidates for an Oscar (in the following year).</p>
+            <p>The data collected via get_top_movies by year successfully found the IMDBid (the reference id used across the different segment of this project) for approximately 90% of the top 200 movies in each given year. The additional 10% of IMDBids not found by the above procedure were identified manually. The manual determination of IMDBids was recorded in two new files: 'revised_id_data.csv' and 'completedata.csv'.</p>
+            <p>Of the top 200 movies from each year, approximately 5% were excluded from further analysis. The top reasons for movie exclusion included:
+                <ul>
+                    <li>Re-releases of prior movies (often occurs around the holidays)</li>
+                    <li>Re-releases of movies with visual enhancements (a very common procedure for Disney movies)</li>
+                    <li>Exclusive release of movies in IMAX theaters</li>
+                    <li>One-time limited showings of events such as concerts (see Fathom Events)</li>
+                    <li>When a movie was excluded from analysis its IMDBid was set to 'None'. These rows of the dataframe were then removed from analysis. In addition, all dollar values were converted to 2013 dollars, accounting for inflation as reported by <a href="http://usinflation.org/us-inflation-rate">usinflationrates.org</a></li>
+                </ul>
+            </p>
+        </div>
+        <hr>
+        <h4>Getting the Movie Reviews</h4>
+        <div>
+            <p>We needed to construct DataFrames for our movie reviews and rating data, so first we needed to pull this data from the web.  We chose to use the following sources:
+                <ul>
+                    <li>Rotten Tomatoes</li>
+                    <li>Metacritic</li>
+                    <li>IMDB</li>
+                </ul>
+            When pulling the data, we were sure to only take reviews and ratings that are specific to the site in question (for example, for IMDB, we only took the IMDB <i>user</i> reviews because the critic reviews are linked from other sites like Rotten Tomatoes and Metacritic.</p>
+            <p>From these sources, we scraped our review data and stored in it Dataframes of the following strcture:</p>
+            <table class="table-bordered"><thead><tr><th>Critic</th><th>Normalized Score</th><th>Quote</th><th>ID</th><th>Title</th><th>Source</th><th>Overall Score</th><th>Year</th></tr></thead><thead></thead><tbo<tr><td>Name of the Critic</td><td>Score normalized to what the max is for this source</td><td>The string of the review</td><td>Movie ID for this site</td><td>Title of the movie</td><td>Source of the review</td><td>The overall score for this movie on this site (if there is one)</td><td>Year that the movie is form</td></tr></tbo</table>
+        </div>
+        <br>
+        <div><a class="btn btn-default slide btn-success" href="visdata.html">Seeing the Data &raquo;</a></div>
       <hr>
 
       <footer>
         <p>&copy; Company 2013</p>
       </footer>
     </div> <!-- /container -->
-    </body>
+        </div> <!-- wrapper -->
+</body>
+
 </html>
