--- a/predict.html
+++ b/predict.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>And the Oscar Goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -17,6 +17,8 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link href="img/favicon.ico" rel="shortcut icon">
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script src="js/jquery-1.10.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -28,6 +30,8 @@
         <![endif]-->
     </head>
     <body>
+    <div class='wrapper'>
+
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -65,5 +69,7 @@
         <p>&copy; Company 2013</p>
       </footer>
     </div> <!-- /container -->
-    </body>
+        </div> <!-- wrapper -->
+</body>
+
 </html>
