stats and new background

--- a/getdata.html
+++ b/getdata.html
@@ -86,7 +86,7 @@
                 </ul>
             When pulling the data, we were sure to only take reviews and ratings that are specific to the site in question (for example, for IMDB, we only took the IMDB <i>user</i> reviews because the critic reviews are linked from other sites like Rotten Tomatoes and Metacritic.</p>
             <p>From these sources, we scraped our review data and stored in it Dataframes of the following strcture:</p>
-            <table class="table-bordered"><thead><tr><th>Critic</th><th>Normalized Score</th><th>Quote</th><th>ID</th><th>Title</th><th>Source</th><th>Overall Score</th><th>Year</th></tr></thead><thead></thead><tbo<tr><td>Name of the Critic</td><td>Score normalized to what the max is for this source</td><td>The string of the review</td><td>Movie ID for this site</td><td>Title of the movie</td><td>Source of the review</td><td>The overall score for this movie on this site (if there is one)</td><td>Year that the movie is form</td></tr></tbo</table>
+            <table class="table-bordered"><thead><tr><th>Critic</th><th>Normalized Score</th><th>Quote</th><th>ID</th><th>Title</th><th>Source</th><th>Overall Score</th><th>Year</th></tr></thead><thead></thead><tbody><tr><td>Name of the Critic</td><td>Score normalized to what the max is for this source</td><td>The string of the review</td><td>Movie ID for this site</td><td>Title of the movie</td><td>Source of the review</td><td>The overall score for this movie on this site (if there is one)</td><td>Year that the movie is form</td></tr></tbody></table>
         </div>
         <br>
         <div><a class="btn btn-default slide btn-success" href="visdata.html">Seeing the Data &raquo;</a></div>
