added some more pictures

--- a/stat.html
+++ b/stat.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>And the Oscar Goes to...</title>
+        <title>And the Oscar goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -55,8 +55,7 @@
 
     <div class="header">
       <div class="container">
-        <h3>Statistical Analysis</h3>
-        <p>methods used, assumptions made, etc.</p>
+        <h2>Statistical Analysis</h2>
       </div>
     </div>
 
@@ -105,7 +104,19 @@ False negative rate: 19.44%
         </div>
         <h3>Analyzing the Box Office Mojo Data</h3>
         <div>
+            <img class="vis" src="img/data/bomj_pred_noms.png">
+            <img class="vis" src="img/data/bomj_probvact.png">
+            <img class="vis" src="img/data/bomj_pred_ts.png">
+            <img class="vis" src="img/data/bomj_pred_fs.png">
+            <img class="vis" src="img/data/comb_pred_noms.png">
+            <img class="vis" src="img/data/comb_probvact.png">
+            <img class="vis" src="img/data/comb_pred_ts.png">
+            <img class="vis" src="img/data/comb_pred_fs.png">
         </div>
+        <h3>Combined Analysis</h3>
+        <div>
+        </div>
+        <div><a class="btn btn-default slide btn-success" href="predict.html">And the Oscar goes to... &raquo;</a></div>
       <hr>
 
       <footer>
