--- a/getdata.html
+++ b/getdata.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>And the Oscar Goes to...</title>
+        <title>And the Oscar goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -71,7 +71,7 @@
                     <li>Re-releases of movies with visual enhancements (a very common procedure for Disney movies)</li>
                     <li>Exclusive release of movies in IMAX theaters</li>
                     <li>One-time limited showings of events such as concerts (see Fathom Events)</li>
-                    <li>When a movie was excluded from analysis its IMDBid was set to 'None'. These rows of the dataframe were then removed from analysis. In addition, all dollar values were converted to 2013 dollars, accounting for inflation as reported by <a href="http://usinflation.org/us-inflation-rate">usinflationrates.org</a></li>
+                    <li>When a movie was excluded from analysis its IMDBid was set to 'None'. These rows of the dataframe were then removed from analysis. In addition, all dollar values were converted to 2013 dollars, accounting for inflation as reported by <a href="http://usinflation.org/us-inflation-rate" target="_blank">usinflationrates.org</a></li>
                 </ul>
             </p>
         </div>
