--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>And the Oscar Goes to...</title>
+        <title>And the Oscar goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -70,9 +70,9 @@
 
     <div class="container">
       <div>
-        <p>To get started, you can begin by watching the video below, clicking the following button.
-          <div><a class="btn btn-default slide btn-success" href="getdata.html">Let's Begin &raquo;</a></div></p>
+        <p>To get started, you can begin by watching the video below, clicking the following button.  To see the in depth data and analyses please refer to our <a href="http://nbviewer.ipython.org/github/rizzomichaelg/cs109-oscars/blob/master/process_book.ipynb" target="_blank">process book</a>.</p>
       </div>
+      <div><a class="btn btn-default slide btn-success" href="getdata.html">Let's Begin &raquo;</a></div>
       <div style= "text-align:center">
         <b>Link to video goes here</b>
       </div>
