--- a/predict.html
+++ b/predict.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>And the Oscar Goes to...</title>
+        <title>And the Oscar goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -56,13 +56,15 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="header">
       <div class="container">
-        <h3>Predictions for Oscars 2014</h3>
-        <p>Fun part where we report our predictions for this year's movies.</p>
+        <h2>Predictions for Oscars 2014</h2>
       </div>
     </div>
 
     <div class="container">
-
+        <div>
+            <p>Now having constructed, reconstructed, edited, combined, and tested our model, we sought to actually predict what movies might win Oscars and which movies will be nominated.</p>
+            <p>To do this, we first scraped a list of the top 200 movies for this year at this point.  We then constructed a new Naive Bayes model for this set and calculated the probabilities that a movie will win or get nominated.  We then combined these predictions with our logistic regression model over the Box Office Mojo data.  Once we had these, we ran...</p>
+        </div>
       <hr>
 
       <footer>
