--- a/visdata.html
+++ b/visdata.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>And the Oscar Goes to...</title>
+        <title>And the Oscar goes to...</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -63,6 +63,21 @@
     <div class="container">
         <b>Box Office Mojo</b>
         <div>
+            <p>intro text here</p>
+            <img class="vis" src="img/data/bomj_studiocount_all.png">
+            <img class="vis" src="img/data/bomj_studiocount_win.png">
+            <img class="vis" src="img/data/bomj_studiocount_nom.png">
+            <p>text here</p>
+            <p>intro text here</p>
+            <img class="vis" src="img/data/bomj_ntheaters_all.png">
+            <img class="vis" src="img/data/bomj_ntheaters_win.png">
+            <img class="vis" src="img/data/bomj_ntheaters_nom.png">
+            <p>text here</p>
+            <p>intro text here</p>
+            <img class="vis" src="img/data/bomj_gross_all.png">
+            <img class="vis" src="img/data/bomj_gross_win.png">
+            <img class="vis" src="img/data/bomj_gross_nom.png">
+            <p>text here</p>
         </div>
         <hr>
         <b>IMDB</b>
