--- a/visdata.html
+++ b/visdata.html
@@ -48,6 +48,8 @@
             <li><a href="visdata.html">Visualizing the Data</a></li>
             <li><a href="stat.html">Statistical Analysis</a></li>
             <li><a href="predict.html">Predictions</a></li>
+            <li><a href="closing_remarks.html">Closing Remarks</a></li>
+
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -92,7 +94,7 @@ Number of Movies: 1900
             <p>We next decided to look at the average number of reviews per user to try to get an idea of the roughly the users' 'rating experience'</p>
             <img class="vis" src="img/data/imdb_revpercrit.png">
             <p>As one can see, although we have a very large number of reviews and reviews, most of them do not interview that many movies themselves.</p>
-            <p>Next, we will visualize how the number of reviews changes over the years, and how the average ratings equuivalently change.</p>
+            <p>Next, we will visualize how the number of reviews changes over the years, and how the average ratings equivalently change.</p>
             <img class="vis" src="img/data/imdb_reviews_over_years.png">
             <p>Interestingly, the peak of user reviews is in 2005, with the number of reviews exponentially falling off until 2011. Thus, it seems that as IMDB became more widespread and popular, <i>fewer</i> people actually have been leaving reviews for movies.</p>
             <p>Now that we have an idea of the distribution of the data over the years, let's look at the actual review ratings. On IMDB users have the option of rating movies without actually leaving a review. Here, we compare the overall movie rating to the average rating user critics give as an approximate measure of whether user critics or general users rate movies more harshly.</p>
@@ -104,7 +106,7 @@ average user critic rating: 6.27 / 10
             <img class="vis" src="img/data/imdb_avg_rating.png">
             <p>From this histogram, it appears we have an almost bi-modal distribution where the highest frequency averages are at the polar ends. Considering that a user would be more likely to write a review for a movie if he or she absolutely hated or loved it, this isn't that surprising because then they too would rate it at the extremes.</p>
         </div>
-        <div><a class="btn btn-default slide btn-success" href="stat.html">Give me some Stats! &raquo;</a></div>
+        <div><a class="btn btn-default slide btn-success" href="stat.html">Give me some stats! &raquo;</a></div>
       <hr>
       <footer>
         <p>&copy; Company 2013</p>
