--- a/predict.html
+++ b/predict.html
@@ -48,6 +48,8 @@
             <li><a href="visdata.html">Visualizing the Data</a></li>
             <li><a href="stat.html">Statistical Analysis</a></li>
             <li><a href="predict.html">Predictions</a></li>
+            <li><a href="closing_remarks.html">Closing Remarks</a></li>
+
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
