--- a/predict.html
+++ b/predict.html
@@ -67,6 +67,7 @@
             <p>Now having constructed, reconstructed, edited, combined, and tested our model, we sought to actually predict what movies might win Oscars and which movies will be nominated.</p>
             <p>To do this, we first scraped a list of the top 200 movies for this year at this point.  We then constructed a new Naive Bayes model for this set and calculated the probabilities that a movie will win or get nominated.  We then combined these predictions with our logistic regression model over the Box Office Mojo data.  Once we had these, we ran...</p>
         </div>
+        <div><a class="btn btn-default slide btn-success" href="closing_remarks.html">Closing Remarks... &raquo;</a></div>
       <hr>
 
       <footer>
