--- a/visdata.html
+++ b/visdata.html
@@ -65,25 +65,24 @@
     <div class="container">
         <b>Box Office Mojo</b>
         <div>
-            <p>intro text here</p>
+            <p>In order to see a rough distribution of movie studios and Oscar wins/nominations, we visualized frequency of awards or nominations for each studio:</p>
             <img class="vis" src="img/data/bomj_studiocount_all.png">
             <img class="vis" src="img/data/bomj_studiocount_win.png">
             <img class="vis" src="img/data/bomj_studiocount_nom.png">
-            <p>text here</p>
-            <p>intro text here</p>
+            <p>An exploration of the studios producing Oscar-candidate movies reveals that some of the largest studios, particularly Buena Vista and Warner Brothers, are the most common studios amongst Oscar nominees and winners. As expected, studios which most frequently produce Oscar nominees are also among the studios that most frequently produce Oscar Winners. (Note: The above analysis is over all movie-based Oscars, as defined previously.)</p>
+            <p>Next wanting to investigate further how success in the Oscars goes with different quantitative movie data, we visualized the frequencies of wins and nominations and either the number of theaters or the gross revenue.</p>
             <img class="vis" src="img/data/bomj_ntheaters_all.png">
             <img class="vis" src="img/data/bomj_ntheaters_win.png">
             <img class="vis" src="img/data/bomj_ntheaters_nom.png">
-            <p>text here</p>
-            <p>intro text here</p>
             <img class="vis" src="img/data/bomj_gross_all.png">
             <img class="vis" src="img/data/bomj_gross_win.png">
             <img class="vis" src="img/data/bomj_gross_nom.png">
-            <p>text here</p>
+            <p>As one might reasonably expect, Oscar winners and nominees are more likely to appear in more theaters during their first weekend and draw a larger gross revenue than their less successful counterparts. This result is shown the relative right skew in the nominee and winner histograms.</p>
         </div>
         <hr>
-        <b>IMDB</b>
+        <b>Review Data</b>
         <div>
+            <p>We chose to display the IMDB data here as it is roughly representative of the other review sources.  For information about the other review sources, please see our <a href="http://nbviewer.ipython.org/github/rizzomichaelg/cs109-oscars/blob/master/process_book.ipynb" target="_blank">process book</a>.</p>
             <p>We began by investigating the basic stucture for the IMDB DataFrame:
 <pre class="text">
 Number of reviews: 435,277
