--- a/visdata.html
+++ b/visdata.html
@@ -83,7 +83,7 @@
         <b>Review Data</b>
         <div>
             <p>We chose to display the IMDB data here as it is roughly representative of the other review sources.  For information about the other review sources, please see our <a href="http://nbviewer.ipython.org/github/rizzomichaelg/cs109-oscars/blob/master/process_book.ipynb" target="_blank">process book</a>.</p>
-            <p>We began by investigating the basic stucture for the IMDB DataFrame:
+            <p>We began by investigating the basic structure for the IMDB DataFrame:
 <pre class="text">
 Number of reviews: 435,277
 Number of critics: 199,188
