--- a/closing_remarks.html
+++ b/closing_remarks.html
@@ -80,7 +80,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>Presented By: Nick Perkons, Mike Rizzo, Julia Careaga, &amp; Ibrahim Khan</p>
       </footer>
     </div> <!-- /container -->
 </div> <!-- wrapper -->
