--- a/predict.html
+++ b/predict.html
@@ -97,7 +97,7 @@ Top 10 predicted Oscar Winners and probabilities:
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>Presented By: Nick Perkons, Mike Rizzo, Julia Careaga, &amp; Ibrahim Khan</p>
       </footer>
     </div> <!-- /container -->
 </div> <!-- wrapper -->
