--- a/stat.html
+++ b/stat.html
@@ -159,7 +159,7 @@ True Pos. Rate: 25.1968503937, True Neg. Rate: 97.0414201183
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>Presented By: Nick Perkons, Mike Rizzo, Julia Careaga, &amp; Ibrahim Khan</p>
       </footer>
     </div> <!-- /container -->
 </div> <!-- wrapper -->
