--- a/visdata.html
+++ b/visdata.html
@@ -108,7 +108,7 @@ average user critic rating: 6.27 / 10
         <div><a class="btn btn-default slide btn-success" href="stat.html">Give me some stats! &raquo;</a></div>
       <hr>
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>Presented By: Nick Perkons, Mike Rizzo, Julia Careaga, &amp; Ibrahim Khan</p>
       </footer>
     </div> <!-- /container -->
 </div> <!-- wrapper -->
