--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
       <div><a class="btn btn-default slide btn-success" href="getdata.html">Let's Begin &raquo;</a></div>
       <div style= "text-align:center">
-        <b>Link to video goes here</b>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/3KSz4L8aoNY" frameborder="0" allowfullscreen></iframe>
       </div>
 
       <hr>
